--- a/app/views/author/posts/_post.html.erb
+++ b/app/views/author/posts/_post.html.erb
@@ -1,11 +1,8 @@
-<div class="col-sm-6 col-lg-4">
-  <div class="card">
-    <div class="card-topper" style="background-image: url(<%= post.banner_image_url %>);"></div>
-    <div class="card-block">
-      <h4 class="card-title"><%= link_to post.title, post %></h4>
-      <p class="published-date"><%= post.display_day_published %></p>
-      <p class="card-text"><%= truncate(post.description, length: 130) %></p>
-      <%= link_to "Read", post, class: "btn btn-read" %>
-    </div>
-  </div>
-</div>
+<tr>
+  <td><%= link_to post.title, author_post_path(post) %></td>
+  <td></td>
+  <td><%= link_to 'Edit', edit_author_post_path(post), class: 'btn btn-sm btn-warning' %></td>
+  <td><%= link_to 'Remove', author_post_path(post), method: :delete, data: {
+    confirm: 'Are your sure?'
+    }, class: 'btn btn-sm btn-danger' %></td>
+</tr>
