Add devise, rename author to authors

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -12,7 +12,7 @@
           <%= link_to "Contact", contact_path, class: "nav-link #{yield(:contact_active)}" %>
         </li>
         <li class="list-group-item">
-          <%= link_to "My posts", author_posts_path, class: "nav-link #{yield(:author)}" %>
+          <%= link_to "My posts", authors_posts_path, class: "nav-link #{yield(:author)}" %>
         </li>
       </ul>
     </div>
@@ -37,7 +37,7 @@
         <%= link_to "Contact", contact_path, class: "nav-link #{yield(:contact_active)}" %>
       </li>
       <li class="nav-item">
-        <%= link_to "My posts", author_posts_path, class: "nav-link #{yield(:author)}" %>
+        <%= link_to "My posts", authors_posts_path, class: "nav-link #{yield(:author)}" %>
       </li>
     </ul>
   </div>
