--- a/app/views/blog/posts/index.html.erb
+++ b/app/views/blog/posts/index.html.erb
@@ -1,8 +1,14 @@
 <% provide(:page_title, 'All Posts') %>
 <% provide(:blog_active, 'active') %>
 
+<div class="apple_pagination">
+  <%= will_paginate @posts, :container => false %>
+</div>
 <div class="row">
   <% @posts.each do |post| %>
     <%= render post %>
   <% end %>
+</div>
+<div class="apple_pagination">
+  <%= will_paginate @posts, :container => false %>
 </div>
